--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@ body {
   display: flex;
   place-items: center;
   min-width: 320px;
+  width: 100%;
   min-height: 100vh;
 }
 
@@ -33,6 +34,12 @@ button {
   transition: border-color 0.25s;
 }
 
+@media (max-width: 884px) {
+  .hero .w-full {
+    width: 100%;
+  }
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #ffffff;
@@ -46,4 +53,7 @@ button {
     font-weight: 600;
   }
 }
+
+
+
 @import "tailwindcss";
